--- a/MvcCv/Views/Sertifika/Index.cshtml
+++ b/MvcCv/Views/Sertifika/Index.cshtml
@@ -43,7 +43,7 @@
                                         </div>
                                     }
                                 </div>
-                                <a href="/Sertifika/YeniSertifika/" class="btn btn-info">Yeni Sertifika Girişi</a>
+                                <a href="/Sertifika/YeniSertifika/" class="btn btn-outline-warning">Yeni Sertifika Girişi</a>
 
                             </div>
                         </div>
