--- a/MvcCv/Views/Yetenek/YetenekDuzenle.cshtml
+++ b/MvcCv/Views/Yetenek/YetenekDuzenle.cshtml
@@ -1,22 +1,32 @@
 ﻿@model MvcCv.Models.Entity.TblYeteneklerim
 
-
 @{
-    ViewBag.Title = "YetenekDuzenle";
+    ViewBag.Title = "Yetenek Düzenle";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<div class="container mt-5">
+    <div class="card shadow-sm rounded-3">
+        <div class="card-header bg-primary text-white">
+            <h4 class="mb-0">Yetenek Düzenleme</h4>
+        </div>
+        <div class="card-body">
+            <form method="post">
+                <div class="mb-3">
+                    @Html.LabelFor(x => x.Yetenek, "Yetenek Açıklaması", new { @class = "form-label" })
+                    @Html.TextBoxFor(x => x.Yetenek, new { @class = "form-control", placeholder = "Yetenek adı girin" })
+                </div>
 
-<h3>Yetenek Düzenleme Sayfası</h3>
-<form method="post">
+                <div class="mb-3">
+                    @Html.LabelFor(x => x.Oran, "Derece", new { @class = "form-label" })
+                    @Html.TextBoxFor(x => x.Oran, new { @class = "form-control", placeholder = "0-100 arasında değer girin" })
+                </div>
 
-    <br />
-    @Html.Label("Yetenek Açıklaması")
-    @Html.TextBoxFor(x => x.Yetenek, new { @class = "form-control" })
-    <br />
-    @Html.Label("Derece")
-    @Html.TextBoxFor(x => x.Oran, new { @class = "form-control" })
-    <br />
-    <button class="btn btn-outline-success">Güncelle</button>
-    <a href="/Yetenek/Index/" class="btn btn-outline-primary">Geri Dön</a>
-</form>
+                <div class="d-flex justify-content-between">
+                    <button type="submit" class="btn btn-success">Güncelle</button>
+                    <a href="/Yetenek/Index" class="btn btn-secondary">Geri Dön</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
