--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -71,7 +71,7 @@
 
                                                 <td>
                                                     <div class="progress progress-xs">
-                                                        <div class="@renk" style="width: @item.Oran%"></div>
+                                                        <div class="@renk" style="width: @item.Oran "%"></div>
                                                     </div>
                                                 </td>
                                                 <td><span class="@labelrenk">@item.Oran%</span></td>
