--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -1,137 +1,80 @@
-﻿@using MvcCv.Models.Entity
-@model List<TblYeteneklerim>
-
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
-
-@{string renk = " "; }
-@{string labelrenk = " "; }
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<!DOCTYPE html>
-<html>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+
+    <link rel="stylesheet" href="/AdminLTE-3.0.4/dist/css/adminlte.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+</head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <section class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="card-header">
-                                <br />
-                                <h3 class="card-title" style="color:brown">Yetenek Listesi</h3>
-                            </div>
-                            <div class="card-body">
-                                <br />
-                                <table class="table table-bordered table table-dark" id="myTable">
-                                    <thead>
 
-                                        <tr>
-                                            <th style="width: 10px">ID</th>
-                                            <th>Yetenek</th>
-                                            <th>Derece</th>
-
-                                            <th style="width: 40px">Oran</th>
-                                            <th>Düzenle</th>
-                                            <th>Sil</th>
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-
-                                            if (item.Oran >= 0 && item.Oran <= 50)
-                                            {
-                                                renk = "progress-bar bg-danger";
-                                                labelrenk = "badge bg-danger";
-                                            }
-                                            if (item.Oran >= 51 && item.Oran <= 70)
-                                            {
-                                                renk = "progress-bar bg-warning";
-                                                labelrenk = "badge bg-warning";
-                                            }
-                                            if (item.Oran >= 71 && item.Oran <= 84)
-                                            {
-                                                renk = "progress-bar bg-primary";
-                                                labelrenk = "badge bg-primary";
-                                            }
-                                            if (item.Oran >= 85 && item.Oran <= 100)
-                                            {
-                                                renk = "progress-bar bg-success";
-                                                labelrenk = "badge bg-success";
-                                            }
-
-
-                                            <tr>
-                                                <td>@item.ID</td>
-                                                <td>@item.Yetenek</td>
-
-                                                <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="@renk" style="width: @item.Oran "%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="@labelrenk">@item.Oran%</span></td>
-
-                                                <td>
-                                                    <a class="btn btn-info btn-sm" href="/Yetenek/YetenekDuzenle/
-                                                       @item.ID">
-                                                        <i class="fas fa-pencil-alt">
-                                                        </i>
-                                                        Düzenle
-                                                    </a>
-                                                </td>
-                                                @*<a class="btn btn-danger btn-sm" href="/Yetenek/YetenekSil/ </a>@item.ID">*@
-
-
-                                                <td>
-                                                    @Html.ActionLink("Sil", "YetenekSil", new { ID = item.ID },
-                                                   new { @class = "btn btn-danger", onclick = "return confirm ( 'Silmek İstediğinizden Emin misin ?')" })
-
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                                <br />
-                                <a href="/Yetenek/YeniYetenek/" class="btn btn-outline-primary">Yeni Yetenek Ekle</a>
-
-
-                            </div>
-
-                            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-                            <link href="~/Content/bootstrap.css" rel="stil sayfası" />
-
-                            <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-                            <link href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css" rel="stylesheet" />
-                            <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-                            <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap4.min.js "></script>
-
-                            <script type="text/javascript">
-                                var js = jQuery.noConflict(true);
-                                js(document).ready(function () {
-                                    js('#myTable').DataTable(
-
-                                        {
-                                            "language": {
-                                                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Turkish.json"
-                                            }
-                                        }
-                                    );
-                                });
-                            </script>
-
-
-
-                        </div>
-
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <a href="/Default/Index/" class="brand-link">
+                <img src="~/AdminLTE-3.0.4/dist/img/WIN_20240803_16_31_56_Pro.jpg" class="brand-image img-circle elevation-3" style="opacity:.8">
+                <span class="brand-text font-weight-light">Siteye Git</span>
+            </a>
+            <div class="sidebar">
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                    <div class="image">
+                        <img src="~/AdminLTE-3.0.4/dist/img/web tasarım ve programlama.jpg" class="img-circle elevation-2" style="width:75px; height:75px" alt="User Image" />
+                    </div>
+                    <div class="info">
+                        <a href="~/Login/LogOut/" class="d-block">Admin Paneli</a>
                     </div>
                 </div>
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                        <li class="nav-item"><a href="/Hakkimda/Index/" class="nav-link"><i class="fas fa-user me-2"></i><p>Hakkımda</p></a></li>
+                        <li class="nav-item"><a href="/Egitim/Index/" class="nav-link"><i class="fas fa-th me-2"></i><p>Egitimlerim</p></a></li>
+                        <li class="nav-item"><a href="/Deneyim/Index/" class="nav-link"><i class="fas fa-copy me-2"></i><p>Deneyimlerim</p></a></li>
+                        <li class="nav-item"><a href="/Hobi/Index/" class="nav-link"><i class="fas fa-chart-pie me-2"></i><p>Hobilerim</p></a></li>
+                        <li class="nav-item"><a href="/Yetenek/Index/" class="nav-link"><i class="far fa-calendar-alt me-2"></i><p>Yeteneklerim</p></a></li>
+                        <li class="nav-item"><a href="/Sertifika/Index/" class="nav-link"><i class="far fa-image me-2"></i><p>Sertifikalarım</p></a></li>
+                        <li class="nav-item"><a href="/iletisim/Index/" class="nav-link"><i class="far fa-envelope me-2"></i><p>İletişim</p></a></li>
+                        <li class="nav-item"><a href="/SosyalMedya/Index/" class="nav-link"><i class="fas fa-code me-2"></i><p>Sosyal Medya</p></a></li>
+                        <li class="nav-item"><a href="/Admin/Index/" class="nav-link"><i class="fas fa-pen me-2"></i><p>Ayarlar</p></a></li>
+                        <li class="nav-item"><a href="/Login/logOut/" class="nav-link"><i class="fas fa-sign-out-alt me-2"></i><p>Çıkış</p></a></li>
+                    </ul>
+                </nav>
             </div>
-        </section>
+        </aside>
+
+        <div class="content-wrapper">
+            @RenderBody()
+        </div>
     </div>
+
+    <!-- JS -->
+    <script src="/AdminLTE-3.0.4/plugins/jquery/jquery.min.js"></script>
+    <script src="/AdminLTE-3.0.4/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/AdminLTE-3.0.4/dist/js/adminlte.min.js"></script>
+
+    <!-- Sidebar ikonları tek seferlik dönme efekti -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const sidebarIcons = document.querySelectorAll(".nav-sidebar .nav-link i");
+            sidebarIcons.forEach(icon => {
+                icon.parentElement.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    icon.classList.add("fa-spin");
+                    setTimeout(() => {
+                        icon.classList.remove("fa-spin");
+                        window.location.href = this.getAttribute("href");
+                    }, 1000);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
