--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -1,149 +1,106 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="~/Content/ckeditor/ckeditor.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Project Add</title>
+    <title>AdminLTE 3 | Admin Panel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/AdminLTE-3.0.4/plugins/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+ 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+
+ 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+
+   
     <link rel="stylesheet" href="/AdminLTE-3.0.4/dist/css/adminlte.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
+        
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <a href="/Default/Index/" class="brand-link">
                 <img src="~/AdminLTE-3.0.4/dist/img/WIN_20240803_16_31_56_Pro.jpg"
-                     alt="AdminLTE Logo"
-                     class="brand-image img-circle elevation-3"
-                     style="opacity: .8" sizes="100">
+                     class="brand-image img-circle elevation-3" style="opacity:.8">
                 <span class="brand-text font-weight-light">Siteye Git</span>
             </a>
+
             <div class="sidebar">
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="~/AdminLTE-3.0.4/dist/img/web tasarım ve programlama.jpg" class="img-circle elevation-2" style="width:75px"; height:"75px" alt="User Image"/>
+                        <img src="~/AdminLTE-3.0.4/dist/img/web tasarım ve programlama.jpg" class="img-circle elevation-2" style="width:75px;height:75px" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="~/Login/LogOut/" class="d-block">Admin Paneli</a>
                     </div>
                 </div>
+
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <li class="nav-item has-treeview">
-                            <a href="/Hakkimda/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    Hakkımda
-                                 
-                                </p>
-                            </a>
+                        <li class="nav-item">
+                            <a href="/Hakkimda/Index/" class="nav-link"><i class="fas fa-user me-2"></i><p>Hakkımda</p></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Egitim/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
-                                <p>
-                                    Egitimlerim
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item has-treeview">
-                            <a href="/Deneyim/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-copy"></i>
-                                <p>
-                                   Deneyimlerim
-                                </p>
-                            </a>
-                           
-                        </li>
-                        <li class="nav-item has-treeview">
-                            <a href="/Hobi/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
-                                <p>
-                                   Hobilerim
-                               
-                                </p>
-                            </a>
-                         
-                        </li>
-                       
-                        <li class="nav-item">
-                            <a href="/Yetenek/Index/" class="nav-link">
-                                <i class="nav-icon far fa-calendar-alt"></i>
-                                <p>
-                                   Yeteneklerim                      
-                                </p>
-                            </a>
+                            <a href="/Egitim/Index/" class="nav-link"><i class="fas fa-th me-2"></i><p>Egitimlerim</p></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Sertifika/Index/" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
-                                <p>
-                                    Sertifikalarım
-                       
-                                </p>
-                            </a>
+                            <a href="/Deneyim/Index/" class="nav-link"><i class="fas fa-copy me-2"></i><p>Deneyimlerim</p></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/iletisim/Index/" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
-                                <p>
-                                  İletişim
-                                </p>
-                            </a>
-                        </li> 
-                        <li class="nav-item">
-                            <a href="/SosyalMedya/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-code" ></i>
-                                <p>
-                                  Sosyal Medya
-                                </p>
-                            </a>
-                        </li>      <li class="nav-item">
-                            <a href="/Admin/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-pen" ></i>
-                                <p>
-                                  Ayarlar
-                                </p>
-                            </a>
-                        </li>         
-                        <li class="nav-item">
-                            <a href="/Login/logOut/" class="nav-link">
-                               <i class="nav-icon fas fa-outdent"></i>
-                                 <p>
-                                 Çıkış
-                                 </p>
-                            </a>
+                            <a href="/Hobi/Index/" class="nav-link"><i class="fas fa-chart-pie me-2"></i><p>Hobilerim</p></a>
                         </li>
-                    </ul> 
+                        <li class="nav-item">
+                            <a href="/Yetenek/Index/" class="nav-link"><i class="far fa-calendar-alt me-2"></i><p>Yeteneklerim</p></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Sertifika/Index/" class="nav-link"><i class="far fa-image me-2"></i><p>Sertifikalarım</p></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/iletisim/Index/" class="nav-link"><i class="far fa-envelope me-2"></i><p>İletişim</p></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/SosyalMedya/Index/" class="nav-link"><i class="fas fa-code me-2"></i><p>Sosyal Medya</p></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Admin/Index/" class="nav-link"><i class="fas fa-pen me-2"></i><p>Ayarlar</p></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Login/logOut/" class="nav-link"><i class="fas fa-sign-out-alt me-2"></i><p>Çıkış</p></a>
+                        </li>
+                    </ul>
                 </nav>
             </div>
         </aside>
+
         <div class="content-wrapper">
-            <section class="content">
-                <div class="row">
-                    <div class="col-md-12">
-                    @RenderBody()
-                         </div>
-                </div>
-            </section>
-       
+            @RenderBody()
         </div>
     </div>
- 
+
+
     <script src="/AdminLTE-3.0.4/plugins/jquery/jquery.min.js"></script>
-
     <script src="/AdminLTE-3.0.4/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <script src="/AdminLTE-3.0.4/dist/js/adminlte.min.js"></script>
 
-    <script src="/AdminLTE-3.0.4/dist/js/demo.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const icons = document.querySelectorAll(".nav-link i");
+            icons.forEach(icon => {
+                icon.parentElement.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    icon.classList.add("fa-spin");
+                    setTimeout(() => {
+                        icon.classList.remove("fa-spin");
+                        window.location.href = this.getAttribute("href");
+                    }, 1000); 
+                });
+            });
+        });
+    </script>
 </body>
 </html>
